--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,20 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  json_annotation: ^4.7.0
   kartal: ^2.7.0
-  vexana: ^3.1.1
+  vexana: ^2.8.1
 
 dev_dependencies:
   build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
