--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   json_annotation: ^4.7.0
   kartal: ^2.7.0
+  shared_preferences: ^2.0.15
   vexana: ^2.8.1
 
 dev_dependencies:
